{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 67,
  "lineage": "01e88217-b522-64ee-04fd-7620520f48ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-017fecd1353bcc96e",
            "arn": "arn:aws:ec2:us-west-2:445836639965:instance/i-0329bc1ea57da7158",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2profile",
            "id": "i-0329bc1ea57da7158",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new-key100",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d8a848636182a8ac",
            "private_dns": "ip-10-0-110-158.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.110.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06792bddd96fac60a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083a85746d6b1a9fc",
            "tags": {
              "Name": "private_instance"
            },
            "tags_all": {
              "Name": "private_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0899a33532d9379da"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2profile",
            "aws_security_group.My_VPC_Security_Group_Private",
            "aws_subnet.My_VPC_Subnet_Private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-017fecd1353bcc96e",
            "arn": "arn:aws:ec2:us-west-2:445836639965:instance/i-0f78488d958c99b02",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2profile",
            "id": "i-0f78488d958c99b02",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new-key100",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02cdfa04ff3b5d36d",
            "private_dns": "ip-10-0-15-83.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.15.83",
            "public_dns": "ec2-52-42-153-139.us-west-2.compute.amazonaws.com",
            "public_ip": "52.42.153.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06ae36b1edb42f338",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a24a0045b38fc87c",
            "tags": {
              "Name": "public_instance"
            },
            "tags_all": {
              "Name": "public_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08bdb4f1516ca0d69"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2profile",
            "aws_security_group.My_VPC_Security_Group_Public",
            "aws_subnet.My_VPC_Subnet_Public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "My_VPC_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445836639965:internet-gateway/igw-03b28fbcdc5548712",
            "id": "igw-03b28fbcdc5548712",
            "owner_id": "445836639965",
            "tags": {
              "Name": "My VPC Internet Gateway"
            },
            "tags_all": {
              "Name": "My VPC Internet Gateway"
            },
            "vpc_id": "vpc-04ab3aedb4d1b6ecc"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "My_VPC_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03b28fbcdc5548712",
            "id": "r-rtb-0303cf2d4cda1ec091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0303cf2d4cda1ec09",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.My_VPC_GW",
            "aws_route_table.My_VPC_PUBLIC_route_table",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "My_VPC_PRIVATE_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445836639965:route-table/rtb-0f58a2f09a647df7e",
            "id": "rtb-0f58a2f09a647df7e",
            "owner_id": "445836639965",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "My VPC PRIVATE Route Table"
            },
            "tags_all": {
              "Name": "My VPC PRIVATE Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ab3aedb4d1b6ecc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "My_VPC_PUBLIC_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445836639965:route-table/rtb-0303cf2d4cda1ec09",
            "id": "rtb-0303cf2d4cda1ec09",
            "owner_id": "445836639965",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b28fbcdc5548712",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My PUBLIC VPC Route Table"
            },
            "tags_all": {
              "Name": "My PUBLIC VPC Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ab3aedb4d1b6ecc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "My_VPC_Private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d811c59fd9ae8ce",
            "route_table_id": "rtb-0f58a2f09a647df7e",
            "subnet_id": "subnet-083a85746d6b1a9fc"
          },
          "dependencies": [
            "aws_route_table.My_VPC_PRIVATE_route_table",
            "aws_subnet.My_VPC_Subnet_Private",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "My_VPC_Public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07402ba6780c165e5",
            "route_table_id": "rtb-0303cf2d4cda1ec09",
            "subnet_id": "subnet-0a24a0045b38fc87c"
          },
          "dependencies": [
            "aws_route_table.My_VPC_PUBLIC_route_table",
            "aws_subnet.My_VPC_Subnet_Public",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My_VPC_Security_Group_Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445836639965:security-group/sg-0899a33532d9379da",
            "description": "My VPC Security Group Private",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0899a33532d9379da",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-08bdb4f1516ca0d69"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "My VPC Security Group Private",
            "name_prefix": "",
            "owner_id": "445836639965",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My VPC Security Group Private"
            },
            "tags_all": {
              "Name": "My VPC Security Group Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ab3aedb4d1b6ecc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.My_VPC_Security_Group_Public",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My_VPC_Security_Group_Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445836639965:security-group/sg-08bdb4f1516ca0d69",
            "description": "My VPC Security Group Public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bdb4f1516ca0d69",
            "ingress": [
              {
                "cidr_blocks": [
                  "71.63.125.93/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "My VPC Security Group Public",
            "name_prefix": "",
            "owner_id": "445836639965",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My VPC Security Group Public"
            },
            "tags_all": {
              "Name": "My VPC Security Group Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ab3aedb4d1b6ecc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "My_VPC_Subnet_Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445836639965:subnet/subnet-083a85746d6b1a9fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083a85746d6b1a9fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445836639965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My VPC Private Subnet"
            },
            "tags_all": {
              "Name": "My VPC Private Subnet"
            },
            "vpc_id": "vpc-04ab3aedb4d1b6ecc"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "My_VPC_Subnet_Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445836639965:subnet/subnet-0a24a0045b38fc87c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a24a0045b38fc87c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "445836639965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My VPC Public Subnet"
            },
            "tags_all": {
              "Name": "My VPC Public Subnet"
            },
            "vpc_id": "vpc-04ab3aedb4d1b6ecc"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445836639965:vpc/vpc-04ab3aedb4d1b6ecc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc4ccf979e3f2bb7",
            "default_route_table_id": "rtb-083d6dbae951d9c9c",
            "default_security_group_id": "sg-09479fdcbf7660da6",
            "dhcp_options_id": "dopt-0dadece1c624cf1a0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ab3aedb4d1b6ecc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-083d6dbae951d9c9c",
            "owner_id": "445836639965",
            "tags": {
              "Name": "My VPC"
            },
            "tags_all": {
              "Name": "My VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445836639965:vpc-endpoint/vpce-0de3793867bc411b9",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-0de3793867bc411b9",
            "owner_id": "445836639965",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0f58a2f09a647df7e"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04ab3aedb4d1b6ecc"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    }
  ]
}